# BERT-sequence-classifier

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  eval.py  inferer.py  main.py  pyproject.toml  requirements_inference.txt  train.py
data/: EDA.ipynb  conference_dataset.py  toxic_dataset.py
models/: __init__.py  bert_multi_label.py  bert_weighted_loss.py  distilbert_multi_label.py  distilbert_weighted_loss.py  roberta_multi_label.py  roberta_weighted_loss.py
notebooks/: EDA-multi-class.ipynb  EDA-multi-label.ipynb
utils/: __init__.py  config.py  data_loaders.py  dataset.py  losses.py  metrics.py  processor.py
