[tool.poetry]
name = "multi-label-classifier"
version = "0.1.0"
description = "\"BERT-based multi-label-classifier\""
authors = ["JulesBelveze <jules.belveze@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.5"
tqdm = "^4.54.1"
torch = "^1.7.1"
transformers = "^4.1.1"
scikit-learn = "^0.23.2"
ipdb = "^0.13.4"
numpy = "^1.19.4"
neptune-client = "^0.4.129"
python-dotenv = "^0.15.0"
psutil = "^5.8.0"
matplotlib = "^3.3.3"
neptune-contrib = "^0.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
